# memory-man

./: .gitignore  .mcp.json.backup  CLAUDE.md  FEATURE_SUMMARY.md  LESSONS_LEARNED.md  README.md  SYNC_WORKFLOW.md  USAGE_GUIDE.md  install.sh  integration_guide.md  mcp_config.json  memory_sync.py  migrate_databases.py  pyproject.toml  requirements-core.txt  requirements.txt  test_complete.py  test_enhanced.py  test_server.py
exports/: memories_sanitized.json
scripts/: backup_memories.py  stats.py
src/memory_man/: __init__.py  __main__.py  config.py  database.py  server.py  server_wrapper.py
src/memory_man/models/: __init__.py  memory.py
src/memory_man/utils/: __init__.py  project_detector.py  summarizer.py
